--- a/ansible/roles/node-prep/meta/main.yml
+++ b/ansible/roles/node-prep/meta/main.yml
@@ -10,15 +10,9 @@ galaxy_info:
   min_ansible_version: "2.15"
 
   platforms:
-    - name: Debian
-      versions:
-        - bullseye
-        - bookworm
     - name: Ubuntu
       versions:
-        - focal
-        - jammy
-        - noble
+        - questing
 
   galaxy_tags:
     - kubernetes
