test: use ttl.sh for controller testing
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/cloudflare-tunnel-gateway-controller.yaml
+++ b/argocd/infra/cloudflare-tunnel-gateway-controller.yaml
@@ -11,9 +11,9 @@ spec:
     namespace: cloudflare-tunnel-system
     server: "https://kubernetes.default.svc"
   sources:
-    - repoURL: oci://ghcr.io/lexfrei/cloudflare-tunnel-gateway-controller/chart
+    - repoURL: oci://ttl.sh/lexfrei/cloudflare-tunnel-gateway-controller
       path: "."
-      targetRevision: 0.9.7
+      targetRevision: 0.1.0
       helm:
         valuesObject:
           gatewayClassConfig:
